fix: do truncation within DisplayAddress

--- a/components/ConnectWallet/ConnectWallet.module.css
+++ b/components/ConnectWallet/ConnectWallet.module.css
@@ -27,8 +27,6 @@
 }
 
 .address {
-  display: block;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  display: flex;
+  gap: 1ch;
 }
